# samurize-backend

./: .gitignore  pyproject.toml  requirements.txt
app/: __init__.py  clean.py  logic.py  main.py  model.py  schema.py  scraper.py
data/: Samuraize.ipynb
