[tool.poetry]
name = "samurize"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.24.0"
sentencepiece = "^0.1.97"
youtube-transcript-api = "^0.5.0"
jupyterlab = "^3.5.0"
nltk = "^3.7"
spacy = "^3.4.3"
torch = "^1.13.0"
fastapi = "^0.88.0"
wikipedia-api = "^0.5.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
